================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0


- Updated embedded LibEventHandler version to 1.2.94 (AddOnVersion: 1294).
[IdleEmotes]
-Optimized the Camera Spin Disabler feature for compatibility with the inventory furniture preview introduced in update 29.

Version 1.6.81 : by Calamath
[HotFix]
- Fixed a bug that the in-game furniture preview feature did not work when using the Camera Spin Disabler.

Version 1.6.80 : by Calamath
[SmartEmotes]
- Addressed an issue inherited from the original version where the game would hang up when performing SmartEmote twice in a row just after swimming or running out of stamina.
[IdleEmotes]
- Addressed an issue that could cause a UI error when performing IdleEmotes immediately after login.

Version 1.6.79 : by Calamath
- code cleanup and refactoring

Version 1.6.78 : by Calamath
[IdleEmotes]
- No longer allowed performing idle emotes by default while in housing editor mode. No more frustration when arranging your furniture.
- Suppressed the error message, 'Cannot play emote at this time' in various situations.
- Optimized the Camera Spin Disabler feature.

Version 1.6.77 : by Calamath
[LorePlay]:Markarth support
- In the wilderness of the Reach and the vast underworld, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Markarth DLC. Markarth and Karthwasten are now recognized as cities. Harrowstorm ritual sites in the Reach are now recognized.
- Updated API version to 100033 (ESO 6.2.x : Markarth)
- Updated embedded LibEventHandler version to 1.2.93 (AddOnVersion: 1293).
[LoreWear]:improvement of location recognition engine.