@@ -6,6 +6,7 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 NOTE : this modified version is still under the Artistic License 2.0
 
 
+- Adjusted location database of Vivec City and Alinor Royal Palace.
 - Updated embedded LibEventHandler version to 1.2.94 (AddOnVersion: 1294).
 [IdleEmotes]
 -Optimized the Camera Spin Disabler feature for compatibility with the inventory furniture preview introduced in update 29.
